tests/fixtures/invalid/none_mul_bool.py
# Cannot multiply None and Bool
x: None = None * True
